# alex

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  alex.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml
alex/: __init__.py  main.py  tools.py
alex/doc/samples/: count_names.py  def_error.py  dup_keywords.py  error2.py  error3.py  error4.py  generator.py  operator_with_no_lexeme.py  operator_with_same_lexeme.py  operator_with_same_name.py  python_function_nesting_levels.py  python_test.py  regexp_with_same_name.py  scan_error.py  scanning_alex.py  simple.py  (+5 more)
alex/tests/: run_tests.py  test_alex.py  test_tools.py
api/alex/: index.html
docs/: index.md  installation.md  usage.md
docs/api/: alex.md
docs/samples/: count_identifiers_occurrence.md  python_function_nesting_levels.md
installation/: index.html
samples/: count_identifiers_occurrence.py  count_if.py  count_keyword.py  count_names.py  dup_keys1.py  dup_keys2.py  dup_keywords.py  find_defs.py  function_tree.py  generator.py  indent.py  keywords.py  most_common_words.py  scanning_python.py  simple.py  simple_keywords.py  skip_char_as_op.py  skip_chars.py  test.py  test2.py  text.txt  text_density.py  version.py
samples/count_identifiers_occurrence/: index.html
samples/python_function_nesting_levels/: index.html
search/: search_index.json
tests/: run_coverage.py  run_tests.py  test_alex.py  test_token.py  test_version.py
tools/: build_dist.cmd  docs_server.cmd  docs_to_github.cmd  install_pypi.cmd  install_test_pypi.cmd  run_coverage.cmd  run_tests.cmd  show_pypi_stats.cmd
usage/: index.html
