[project]
name = "alex-lexer"
version = "0.1.5"
description = "A lightweight lexical analyzer"
authors = [
    { name = "Roger Lindberg" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://rogerlindberg.github.io/alex"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
