[project]
name = "alex-lexer"
version = "0.1.6"
description = "A lightweight lexical analyzer"
authors = [
    { name = "Roger Lindberg" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://rogerlindberg.github.io/alex"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "alex/tests",
]
