[project]
name = "alex-lexer"
version = "0.1.6"
description = "A lightweight lexical analyzer"
authors = [
    { name = "Roger Lindberg" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://rogerlindberg.github.io/alex"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.4.2",
    "coverage>=7.13.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
[tool.mkdocs]
site_name = "alex-lexer"
